--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,28 @@
-.App {
-  text-align: center;
+header {
+  color: #fff;
+  background-color: #FBB03B;
+  padding: 33px 0 25px 15px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+header h1 {
+  font-size: 25px;
+  letter-spacing: 0.3px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 0;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.fa {
+  font-size: 22px;
+  transform: translateY(50deg);
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+header i {
+  vertical-align: middle;
+  margin-left: 12px;
 }
