--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,116 @@ header h1 {
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
-
 }
 
-.fa {
-  font-size: 22px;
-  transform: translateY(50deg);
+.addButton{
+  font-size: 30px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  background-color: #2ecc71;
+  color: #ffffff;
+  transition: background-color .3s;
+  position:fixed;
+  left:30px;
+  bottom:30px;
+  margin:0px;
+  padding:15px 30px;
+  border-radius: 50%;
 }
 
-header i {
-  vertical-align: middle;
-  margin-left: 12px;
+.addButton:hover{
+  background-color: #0a261c;
+}
+
+.recipe-bits{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+li{
+    list-style-type: none;
+    padding: 0;
+}
+.recipe-bit {
+  width: 90%;
+  margin: 30px;
+  background-color: rgb(237, 237, 237);
+  color: #000;
+  box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
+}
+
+.recipe-bit .table{
+  width: 100%;
+  min-width: 100%;
+  border: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.recipe-bit .imgHolder{
+  width: 100%;
+  height: 200px;
+}
+
+.recipe-bit .imgHolder img{
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 400px;
+  padding: 0;
+  margin: 0;
+}
+
+.rName{
+  font-size: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  width: 70%;
+}
+.rButton{
+  text-align: right;
+  width: 30%;
+}
+.rButton button{
+  margin-right: 0;
+  margin-left: auto;
+  padding: 5px 10px;
+  font-size: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  background-color: #2ecc71;
+  color: #ffffff;
+  transition: background-color .3s;
+  border-radius: 10px;
+}
+
+.closeDisplayButton {
+  position: relative;
+  display: block;
+  margin: 30px auto;
+  padding: 15px 25px;
+  overflow: hidden;
+  font-size: 18px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  background-color: #2ecc71;
+  color: #ffffff;
+  transition: background-color .3s;
 }
