--- a/src/AddRecipe.css
+++ b/src/AddRecipe.css
@@ -4,8 +4,6 @@
 .add-recipe {
   margin-left: auto;
   margin-right: auto;
-  padding: 20px 18px;
-  width: 80%;
 }
 .add-recipe .smallInput{
  display: block;
@@ -14,8 +12,7 @@
  padding: 10px;
  border-radius: 20px;
  width: 90%;
- height: 30px;
- margin: 30px;
+ margin: 30px auto;
  font-size: 18px;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 200;
@@ -27,8 +24,7 @@
  padding: 10px;
  border-radius: 20px;
  width: 90%;
- height: 60px;
-  margin: 30px;
+  margin: 30px auto;
   font-size: 18px;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
@@ -40,8 +36,8 @@
  padding: 10px;
  border-radius: 20px;
  width: 90%;
- height: 200px;
-  margin: 30px;
+height: 200px;
+  margin: 30px auto;
   font-size: 18px;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
@@ -76,17 +72,13 @@
 
 .add-recipe button:before {
   content: "";
-
   position: absolute;
   top: 50%;
   left: 50%;
-
   display: block;
   width: 0;
   padding-top: 0;
-
   border-radius: 100%;
-
   background-color: rgba(236, 240, 241, .3);
 
   -webkit-transform: translate(-50%, -50%);
@@ -99,6 +91,5 @@
 .add-recipe button:active:before {
   width: 120%;
   padding-top: 120%;
-
   transition: width .2s ease-out, padding-top .2s ease-out;
 }
