--- a/src/App.css
+++ b/src/App.css
@@ -127,3 +127,25 @@ li{
   color: #ffffff;
   transition: background-color .3s;
 }
+
+.closeAddButton {
+  position: relative;
+  display: block;
+  margin: 0px auto;
+  padding: 15px 25px;
+  overflow: hidden;
+  font-size: 18px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  background-color: #f65c22;
+  color: #ffffff;
+  transition: background-color .3s;
+}
+
+.spacer {
+  height: 20vh;
+}
