--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 header {
     color: #fff;
-    background-color: #FBB03B;
-    padding: 33px 0 25px 15px;
+    background-color: #2ecc71;
+    padding: 30px 15px;
 }
 
 header h1 {
@@ -11,7 +11,6 @@ header h1 {
     vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
-    margin: 0;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 200;
+    font-weight: 600;
 }
