--- a/src/components/RecipeList/RecipeList.css
+++ b/src/components/RecipeList/RecipeList.css
@@ -55,6 +55,7 @@ li {
 }
 
 .recipe-bit {
+    display: block;
     width: 100%;
     outline: none;
     color: #000;
@@ -62,7 +63,8 @@ li {
 }
 
 .recipe-bit .table{
-    width: 100%;
+    display: block;
+    width: inherit;
     min-width: 100%;
     border: 0;
     margin-left: auto;
@@ -70,19 +72,22 @@ li {
 }
 
 .recipe-bit .table td {
+    width: 100%;
     border: none;
 }
 
 .recipe-bit .imgHolder{
-    width: 100%;
-    height: 200px;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 300px;
     padding: 0;
 }
 
 .recipe-bit .imgHolder img{
-    max-width: 100%;
-    min-width: 100%;
-    max-height: 400px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
 .rName{
