--- a/src/components/RecipeList/RecipeList.css
+++ b/src/components/RecipeList/RecipeList.css
@@ -69,6 +69,7 @@ li {
     border: 0;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 0;
 }
 
 .recipe-bit .table td {
@@ -91,7 +92,7 @@ li {
 }
 
 .rName{
-    font-size: 20px;
+    font-size: 22px;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     width: 70%;
